k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f6sny-api-v5
  namespace: f6sny
spec:
  selector:
    matchLabels:
      app: f6sny-api-v5
  template:
    metadata:
      labels:
        app: f6sny-api-v5
    spec:
      containers:
      - name: f6sny-api-v5
        image: ghcr.io/f6sny/api.f6sny.com:latest
        ports:
          - containerPort: 1337
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /_health
            port: 1337
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /_health
            port: 1337
          initialDelaySeconds: 60
          periodSeconds: 20
