k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f6sny-api-v5-service
  namespace: f6sny
spec:
  selector:
    app: f6sny-api-v5
  ports:
    - port: 1337
      targetPort: 1337
      protocol: TCP
  type: ClusterIP
